feat: add sticky label and effects for clicks

--- a/app/src/main/res/layout/city_item.xml
+++ b/app/src/main/res/layout/city_item.xml
@@ -2,17 +2,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:background="#E1E1E1">
+    android:layout_height="56dp">
 
     <LinearLayout
         android:id="@+id/cityItem"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/city_item_height"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:background="#FFFFFF"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,29 +18,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textIdCity"
+        <FrameLayout
+            android:id="@+id/barrier"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="8dp"
-            android:fontFamily="@font/roboto_medium"
             android:gravity="center"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:text="M"
-            android:textSize="24sp" />
+            />
 
-        <TextView
-            android:id="@+id/textCityName"
+        <FrameLayout
+            android:id="@+id/tapperCityItem"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/roboto_regular"
-            android:maxLines="1"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:text="Москва"
-            android:textSize="16sp" />
+            android:layout_height="match_parent"
+            android:background="@drawable/tap_city_background">
+
+            <TextView
+                android:id="@+id/textCityName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/tap_city_background"
+                android:ellipsize="end"
+                android:fontFamily="@font/roboto_regular"
+                android:maxLines="1"
+                android:text="Москва"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:textSize="16sp" />
+        </FrameLayout>
+
     </LinearLayout>
 </FrameLayout>
