--- a/app/src/main/res/layout/fragment_cities.xml
+++ b/app/src/main/res/layout/fragment_cities.xml
@@ -9,8 +9,8 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_gravity="center" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -19,5 +19,52 @@
         android:layout_height="match_parent">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+    <LinearLayout
+        android:id="@+id/errorContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/default_city_color"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <!-- Use lineSpacingMultiplier and lineSpacingExtra
+            because it is only available from version 28,
+            and this is the equivalent for all versions
+        -->
+        <TextView
+            android:id="@+id/textError"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="42dp"
+
+            android:ellipsize="end"
+            android:fontFamily="@font/roboto_medium"
+
+            android:gravity="center"
+            android:lineSpacingExtra="20sp"
+            android:lineSpacingMultiplier="0"
+            android:maxLines="2"
+            android:text="Произошла ошибка"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/buttonRefresh"
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+
+            android:fontFamily="@font/roboto_medium"
+            android:lineSpacingExtra="20sp"
+            android:lineSpacingMultiplier="0"
+            android:maxLines="1"
+            android:text="Обновить"
+            android:textSize="14sp" />
+    </LinearLayout>
 
 </FrameLayout>
