--- a/app/src/main/res/layout/default_load_state.xml
+++ b/app/src/main/res/layout/default_load_state.xml
@@ -4,9 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:paddingStart="8dp"
-    android:paddingEnd="8dp">
+    android:layout_height="@dimen/load_state_height"
+    android:paddingStart="@dimen/load_state_padding_start"
+    android:paddingEnd="@dimen/load_state_padding_end">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -23,7 +23,7 @@
         android:id="@+id/messageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Что-то пошло не так."
+        android:text="@string/something_went_wrong"
         android:visibility="gone"
         tools:visibility="visible"
         app:layout_constraintVertical_chainStyle="packed"
@@ -36,8 +36,8 @@
         android:id="@+id/tryAgainButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Попробуйте снова"
-        android:layout_marginTop="2dp"
+        android:text="@string/try_again"
+        android:layout_marginTop="@dimen/try_again_button_margin_top"
         android:visibility="gone"
         tools:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
