--- a/app/src/main/res/layout/fragment_cities.xml
+++ b/app/src/main/res/layout/fragment_cities.xml
@@ -9,8 +9,8 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/progress_bar_width"
+        android:layout_height="@dimen/progress_bar_height"
         android:layout_gravity="center" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -24,8 +24,8 @@
         android:id="@+id/errorContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/error_container_margin_start"
+        android:layout_marginEnd="@dimen/error_container_margin_end"
         android:background="@color/default_city_color"
         android:gravity="center"
         android:orientation="vertical"
@@ -37,33 +37,27 @@
         -->
         <TextView
             android:id="@+id/textError"
+            style="@style/EllipsisSingleLineRobotoMedium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="42dp"
-
-            android:ellipsize="end"
-            android:fontFamily="@font/roboto_medium"
-
+            android:layout_marginBottom="@dimen/text_error_margin_bottom"
             android:gravity="center"
             android:lineSpacingExtra="20sp"
             android:lineSpacingMultiplier="0"
             android:maxLines="2"
-            android:text="Произошла ошибка"
             android:textSize="14sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+
+            tools:text="Произошла ошибка" />
 
         <Button
             android:id="@+id/buttonRefresh"
+            style="@style/EllipsisSingleLineRobotoMedium"
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-
-            android:fontFamily="@font/roboto_medium"
             android:lineSpacingExtra="20sp"
             android:lineSpacingMultiplier="0"
-            android:maxLines="1"
-            android:text="Обновить"
+            android:text="@string/update"
             android:textSize="14sp" />
     </LinearLayout>
 
