--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,11 @@
     </style>
 
     <style name="Theme.WeatherForecast" parent="Base.Theme.WeatherForecast" />
+
+    <style name="EllipsisSingleLineRobotoMedium">
+        <item name="android:ellipsize">end</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
 </resources>
