--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -50,4 +50,7 @@
     <dimen name="weather_button_update_margin_end">16dp</dimen>
     <dimen name="weather_button_update_margin_bottom">36dp</dimen>
 
+    <!-- city item card -->
+    <dimen name="city_item_card_height">56dp</dimen>
+
 </resources>
